tests/codegen/fail/alias_sourced_composed_dynamic_task_handle_use_after_move_build.stderr
error: tests/codegen/fail/alias_sourced_composed_dynamic_task_handle_use_after_move_build.ql:10:12: local `tasks` was used after move
      return await tasks[slots[row]]
             ^^^^^^^^ use here
      let first = await tasks[alias[row]]
                  ^^^^^^^^ consumed here by `await`
